sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <description>The date on which this person died.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date on which this person died.</inlineHelpText>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>