sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Person&apos;s gender.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s gender.</inlineHelpText>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>