sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Gender_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Gender_at_Birth__c</fullName>
    <description>Person&apos;s gender/birth sex.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s gender/birth sex.</inlineHelpText>
    <label>Gender at Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>