sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/ICN__c.field-meta.xml
<CustomField>
    <fullName>ICN__c</fullName>
    <description>The MPI ICN. Historically, the MPI ICN was also referred to as MVI ICN.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The MPI ICN. Historically, the MPI ICN was also referred to as MVI ICN.</inlineHelpText>
    <label>ICN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>