sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Person&apos;s last name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s last name.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>