sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Person&apos;s middle name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s middle name.</inlineHelpText>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>