sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Place_of_Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_City__c</fullName>
    <description>The city where this person was born.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The city where this person was born.</inlineHelpText>
    <label>Place of Birth - City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>