sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Place_of_Birth_State__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_State__c</fullName>
    <description>The state or territory where this person was born.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state or territory where this person was born.</inlineHelpText>
    <label>Place of Birth - State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>