sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Primary_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_State__c</fullName>
    <description>Primary address state or territory.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary address state or territory.</inlineHelpText>
    <label>Primary Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>