sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Person&apos;s Social Security Number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s Social Security Number.</inlineHelpText>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>