sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Person&apos;s suffix to their name, such as Jr., for example.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s suffix to their name, such as Jr., for example.</inlineHelpText>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>