sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/VAP_Corresp_City__c.field-meta.xml
<CustomField>
    <fullName>VAP_Corresp_City__c</fullName>
    <description>The city name for correspondence from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The city name for correspondence from VA Profile.</inlineHelpText>
    <label>Corresp. City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>