sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/VAP_Corresp_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>VAP_Corresp_Postal_Code__c</fullName>
    <description>The zip/postal code for correspondence from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The zip/postal code for correspondence from VA Profile.</inlineHelpText>
    <label>Corresp. Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>