sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/VAP_Residence_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>VAP_Residence_Address_Line_1__c</fullName>
    <description>The residential street address from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The residential street address from VA Profile.</inlineHelpText>
    <label>Residence Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>