sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/VAP_Residence_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>VAP_Residence_Postal_Code__c</fullName>
    <description>The residential zip/postal code from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The residential zip/postal code from VA Profile.</inlineHelpText>
    <label>Residence Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>