sfdx-source/main/default/objects/TEMPVA_Identity__c/fields/VAP_Residence_State__c.field-meta.xml
<CustomField>
    <fullName>VAP_Residence_State__c</fullName>
    <description>The state/territory of residence from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state/territory of residence from VA Profile.</inlineHelpText>
    <label>Residence State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>