sfdx-source/main/default/objects/TEMPVA_Identity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>SSN__c</columns>
    <columns>ICN__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Place_of_Birth_City__c</columns>
    <columns>Place_of_Birth_State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Gender__c</columns>
    <columns>Gender_at_Birth__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>